# retail-t

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
alembic/: env.py
alembic/versions/: 69d31ee63323_create_initial_tables.py
app/: main.py
app/core/: config.py  database.py  middleware.py
app/infrastructure/storage/: base.py  gcs.py
app/models/: category.py  payment_method.py  product.py  product_price.py  registry.py  sale.py  stock.py
app/repositories/: base.py  category.py  payment_method.py  product.py  product_price.py  sale.py  stock.py
app/routes/: categories.py  payment_methods.py  product_prices.py  products.py  sales.py  stock.py  storage.py
app/schemas/: category.py  payment_method.py  product.py  product_price.py  sale.py  stock.py
app/services/: category.py  payment_method.py  product.py  product_price.py  sale.py  stock.py  storage.py
app/services/storage/: base.py  gcs.py
tests/: conftest.py  test_categories.py  test_contract.py  test_products.py  test_sales.py  test_stock.py
